[package]
name = "cnew"
version = "0.1.0" # Change 
description = "Create simple C directory templates"
authors = ["Mateusz Makowski <matmakos@gmail.com>"]
publish = false
readme = "README.md"
repository = "https://github.com/makos/cnew.git"
license = "MIT"

[dependencies]

[[bin]]
name = "cnew"
path = "src/main.rs"